[package]
name = "test_bevy_game"
version = "0.1.0"
authors = ["saberuster <saberuster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
kcp = {git = "https://github.com/Matrix-Zhang/kcp", branch = "master" }
rand = "0.8.0"